src/objects/Center_Open_Day__c.object
<CustomObject>
    <description>Object to track the days a center is open for work</description>
    <fields>
        <fullName>Calendar_Date__c</fullName>
        <label>Calendar Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Center Open Days</relationshipLabel>
        <relationshipName>Center_Open_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Note__c</fullName>
        <label>Closed Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vacation</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Weather</fullName>
                </value>
                <value>
                    <fullName>RBD Approved</fullName>
                </value>
                <value>
                    <fullName>Doctor Professional Development</fullName>
                </value>
                <value>
                    <fullName>Doctor Personal Reasons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Status__c</fullName>
        <label>Open Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Close_Requests__c</fullName>
        <label>Pending Close Requests</label>
        <summaryFilterItems>
            <field>Close_Request__c.Handled_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>Close_Request__c.Center_Open_Day__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Center Open Day</label>
    <listViews>
        <fullName>Center_Days_View</fullName>
        <columns>NAME</columns>
        <columns>Calendar_Date__c</columns>
        <columns>Center_Information__c</columns>
        <columns>Open_Status__c</columns>
        <columns>Closed_Reason__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Center_Information__c</field>
            <operation>contains</operation>
            <value>Daly City</value>
        </filters>
        <filters>
            <field>Calendar_Date__c</field>
            <operation>greaterThan</operation>
            <value>9/1/2016</value>
        </filters>
        <label>Center Days View</label>
    </listViews>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Center Open Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Center Open Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>